# rust-actix-newsletter

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: audit.yml  general.yml
configuration/: base.yaml  production.yaml
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: routes.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
