[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.39"
config = "0.15.8"
email_address = "0.2.9"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"]}
secrecy = { version = "0.10.3", features = ["serde"]}
serde = { version = "1.0.217", features = ["derive"]}
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"]}
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.16"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.13.1", features = ["v4"] }

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
claims = "0.8.0"
fake = "4.0.0"
once_cell = "1.20.3"
serde_json = "1.0.140"
wiremock = "0.6.3"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
